# fastapi-demo

./: README.md  credentials.py  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  auth.py  credentials.py  database.py  main.py
app/models/: auth.py  user.py
app/models/auth/: auth.py  user.py
app/routers/: auth.py  user.py
tests/: test_api.py  test_db.py  test_user.py
