[tool.poetry]
name = "fastapi_demo"
version = "0.1.0"
description = ""
authors = ["acanois <david.richter42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
httpx = "^0.27.2"
pytest = "^8.3.3"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
